# GNURadio-Scilab

./: .gitignore  1.grc  AUTHORS.md  Makefile  Makefile.common  Makefile.in  README  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  gr_shell.sh  libtool  sbhs_shell  scilab_shell.sh  shbs_temp  sleeper.py  top_block.py
Scilab StepTest/: data.sce  ser_init.sce  step_data
Scilab_StepTest/: README.txt  step_test.sci  step_test.xcos
apps/: Makefile  Makefile.in
autom4te.cache/: output.0  traces.0  traces.1
config/: Makefile  Makefile.in
grc/: .slab_sbhs_scilab.xml.swp  Makefile  Makefile.am  Makefile.in  slab_sbhs_scilab.xml
lib/: Makefile  Makefile.am  Makefile.in  libgnuradio-slab.la  slab_sbhs_scilab.cc  slab_sbhs_scilab.h  slab_sbhs_scilab.lo
lib/.deps/: gr_my_amplifier_ff.Plo  howto_square2_ff.Plo  howto_square_ff.Plo  qa_gr_my_amplifier_ff.Plo  qa_howto.Plo  qa_howto_square2_ff.Plo  qa_howto_square_ff.Plo  qa_my.Plo  slab_sbhs_scilab.Plo  test_all.Po
lib/.libs/: libgnuradio-slab-3.3.0.so.0  libgnuradio-slab-3.3.0.so.0.0.0  (+2 more)
python/: Makefile  Makefile.in  __init__.py  run_tests
swig/: Makefile  Makefile.am  Makefile.in  Makefile.swig.gen  _slab_swig.la  _slab_swig_la-slab_swig.lo  slab.i  slab_sbhs_scilab.i  slab_sbhs_scilab_swig.cc  slab_sbhs_scilab_swig.py  slab_swig.cc  slab_swig.py
swig/.deps/: _gr_my_swig_la-gr_my_swig.Plo  _howto_swig_la-howto_swig.Plo  _my_swig_la-my_swig.Tpo  _slab_swig_la-slab_swig.Plo  gr_my.d  my.d  slab.d  slab_sbhs_scilab.d
swig/.libs/: _slab_swig.la  _slab_swig.lai  _slab_swig.soT
(+4 files in other folders)
